# WireSeal

./: .gitignore  CHANGELOG.md  Dockerfile.test  LICENSE  README.md  SECURITY_AUDIT.md  logo-concepts.html  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  wg-automate.spec  wireseal-cli.spec  wireseal.spec
.claude/: launch.json
.github/workflows/: build.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SECURITY_AUDIT_2026-04-18.md  STATE.md  v0.7.14-PLAN.md
.planning/phases/01-secure-core-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-platform-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-dynamic-dns-and-audit/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-cli-and-client-management/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md
.planning/phases/05-tests-and-packaging/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-dashboard-accuracy-and-display-quality/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-ztna-foundation/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-04-PLAN.md  07-05-PLAN.md  07-06-PLAN.md  07-06-SUMMARY.md  07-07-PLAN.md  07-07-SUMMARY.md  ARCHITECTURE.md  PHASE.md  SECURITY-SPEC.md
.planning/phases/08-realtime-and-filemanager/: 08-01-PLAN.md  08-02-PLAN.md  08-03-PLAN.md  PHASE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
Dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
Dashboard/src/app/: api.ts  (+1 more)
assets/: wireseal.desktop
hooks/: hook-gi.py  rthook_pythonnet_frozen.py
installer/: wireseal.nsi
release_assets/: sha256sums.txt
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1  wireseal-linux.sh  wireseal-macos.sh  wireseal-windows.ps1
src/wg_automate/: __init__.py  main.py
src/wireseal/: __init__.py  api.py  main.py  tray.py
tests/: conftest.py
tests/benchmarks/: test_argon2_timing.py
tests/client/: test_config_store.py
tests/core/: test_config_builder.py  test_ip_pool.py  test_keygen.py  test_validator.py
tests/integration/: test_lifecycle.py  test_phase7.py  test_tampering.py
tests/security/: test_access_control.py  test_api_hardening.py  test_api_ratelimit.py  test_atomic.py  test_audit_rotation.py  test_backup_restore.py  test_client_mode_init.py  test_critical_fixes.py  test_high_fixes.py  test_integrity.py  test_keyslot.py  test_medium_low_fixes.py  test_permissions.py  test_rotation_api.py  test_secret_types.py  test_totp.py  test_totp_integration.py  test_vault.py
(+95 files in other folders)
