[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wg-automate"
version = "0.1.0"
description = "WireGuard automation CLI with encrypted vault and zero plaintext secrets on disk"
requires-python = ">=3.12,<3.15"
dependencies = [
    "cryptography>=46.0,<47",
    "argon2-cffi>=25.1,<26",
    "jinja2>=3.1.6,<4",
    "filelock>=3.20.3,<4",
    "click>=8.3.1,<9",
    "qrcode>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib", "-ra"]
