[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wireseal"
version = "0.1.0"
description = "WireGuard automation CLI with encrypted vault and zero plaintext secrets on disk"
requires-python = ">=3.12,<3.15"
dependencies = [
    "cryptography>=46.0,<47",
    "argon2-cffi>=25.1,<26",
    "jinja2>=3.1.6,<4",
    "filelock>=3.20.3,<4",
    "click>=8.3.1,<9",
    "qrcode>=7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9",
    "pytest-benchmark>=5.1,<6",
    "pytest-mock>=3.14,<4",
    "pytest-cov>=6,<7",
    "pyinstaller>=6.19,<7",
    "pyinstaller-hooks-contrib>=2026.0",
    "pip-tools>=7.5,<8",
    "pip-audit>=2.10,<3",
]

[project.scripts]
wireseal = "wireseal.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--import-mode=importlib",
    "-ra",
    "--tb=short",
    "-m", "not integration",
]
markers = [
    "integration: requires Docker daemon (deselect with '-m not integration')",
    "slow: marks tests as slow (benchmark etc.)",
]

[tool.pip-tools]
generate-hashes = true
strip-extras = true
